[tool.poetry]
name = "piranha-python"
version = "0.0.1.dev6"
description = ""
authors = ["Felipe Martins <ffmmjj@gmail.com>"]
homepage = "https://github.com/ffmmjj/piranha-python"

[tool.poetry.dependencies]
python = "3.8.*"
libcst = "0.3.19"

[tool.poetry.dev-dependencies]
black = "21.5b2"
coverage = "5.5"
flake8 = "3.7.8"
flake8-bugbear = "19.3.0"
flake8-docstrings = "1.3.0"
libcst = "0.3.19"
pep8-naming = "0.8.2"
pre-commit = "1.17.0"
pydocstyle = "<4"
twine = "*"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
py38 = true
